fix about section spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ body {
   text-align: justify;
   font-weight: 400;
   font-size: 1.6rem;
-  line-height: 2rem;
+  line-height: 2.5rem;
   letter-spacing: 0.2px;
 }
 
